--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   "homepage": "https://github.com/andresmcio/take2films#readme",
   "description": "",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
+    "i18n": "^0.15.1",
     "nodemailer": "^6.9.13"
   }
 }
