--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "app.js",
   "scripts": {
     "test": "npx nodemon ./src/app.js",
-    "send-testmail": "node ./src/tests/testMail.js"
+    "send-testmail": "node ./src/tests/testMail.js",
+    "start": "node ./src/app.js"
   },
   "repository": {
     "type": "git",
@@ -28,5 +29,11 @@
     "express": "^4.19.2",
     "i18n": "^0.15.1",
     "nodemailer": "^6.9.13"
+  },
+  "devDependencies": {
+    "grunt": "^1.6.1",
+    "grunt-contrib-cssmin": "^5.0.0",
+    "grunt-contrib-uglify": "^5.2.2",
+    "grunt-contrib-watch": "^1.1.0"
   }
 }
